--- a/index.html
+++ b/index.html
@@ -90,5 +90,6 @@
 <br>
 <footer class="estilofooter">Kinesiologia/Fisiatria
 </footer>
+    <  <script src="./js/funcionalidades.js"></script>
 </body>
 </html>
